--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -138,7 +138,7 @@ body {
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
-    flex: 1 1 auto;
+    // flex: 1 1 auto;
 }
 
 h2 {
