--- a/#src/scss/about.scss
+++ b/#src/scss/about.scss
@@ -3,17 +3,18 @@
     h2 {
         font-style: normal;
         font-weight: normal;
-        font-size: 30px;
-        line-height: 40px;
+        font-size: 25px;
+        line-height: 30px;
         color: #000000;
         margin-bottom: 0;
+        margin-top: 15px;
     }
 }
 
 .about__item {
     display: flex;
     align-items: baseline;
-    width: 47.8%;
+    width: 46%;
     hr {
         border: 1px dashed #727272;
         width: 100%;
@@ -22,15 +23,15 @@
         font-style: normal;
         font-weight: 300;
         font-size: 16px;
-        line-height: 28px;
+        line-height: 24px;
         white-space: nowrap;
         position: relative;
     }
     sup {
-        font-size: 12px;
+        font-size: 7px;
         position: absolute;
-        top: -10px;
-        right: -8px;
+        top: -4px;
+        right: -4px;
     }
 }
 
@@ -38,15 +39,16 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    height: 190px;
+    height: 184px;
     padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 .about__price {
     font-style: normal;
     font-weight: 600;
-    font-size: 23px;
-    line-height: 33px;
+    font-size: 16px;
+    line-height: 22px;
     color: #000000;
     margin-top: auto;
 }
