--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,9 +1,9 @@
 footer {}
 
 .footer__logo {
-    width: 170px;
-    height: 112px;
-    margin-right: 2%;
+    width: 85px;
+    height: 50px;
+    margin-right: 15px;
     img {
         object-fit: contain;
         width: 100%;
@@ -13,33 +13,34 @@ footer {}
 
 .footer__content {
     display: flex;
-    padding: 20px 0;
+    padding: 25px 0;
     align-items: center;
+    justify-content: space-between;
 }
 
 .footer__address {
-    margin-right: 3.5%;
+    margin-right: 20px;
     position: relative;
     p {
         font-style: normal;
         font-weight: 600;
-        font-size: 23px;
-        line-height: 33px;
+        font-size: 16px;
+        line-height: 22px;
         color: #000000;
     }
     span {
         font-style: normal;
         font-weight: 400;
-        font-size: 23px;
-        line-height: 33px;
+        font-size: 16px;
+        line-height: 22px;
         color: #000000;
     }
     &:after {
         position: absolute;
         content: '';
         top: 0;
-        height: 60px;
-        left: -10px;
+        height: 42px;
+        left: -20px;
         width: 1px;
         background-color: #727272;
     }
@@ -47,20 +48,24 @@ footer {}
 
 .footer__contacts {
     justify-content: space-between;
-    width: 39%;
+    width: auto;
     display: flex;
     a {
         font-style: normal;
         font-weight: 300;
-        font-size: 23px;
-        line-height: 33px;
+        font-size: 16px;
+        line-height: 22px;
         color: #000000;
         display: flex;
         align-items: center;
         white-space: nowrap;
+
+        &:first-of-type {
+            margin-right: 20px;
+        }
     }
     svg {
-        margin-right: 15px;
+        margin-right: 8px;
     }
 }
 
