--- a/#src/scss/plan.scss
+++ b/#src/scss/plan.scss
@@ -6,7 +6,7 @@
 }
 
 .plan__big {
-    height: 500px;
+    height: 405px;
     img,
     picture {
         object-fit: contain;
@@ -16,7 +16,6 @@
 }
 
 .plan__floor {
-    height: 370px;
     img,
     picture {
         object-fit: contain;
@@ -24,10 +23,11 @@
         width: 100%;
     }
     &--upper {
-        height: 310px;
+        height: 245px;
+        margin-bottom: 40px;
     }
     &--lower {
-        height: 220px;
+        height: 180px;
     }
 }
 
