--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -142,7 +142,7 @@ body {
 }
 
 h2 {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Museo Sans Cyrl", sans-serif;
     margin-top: 0;
     font-style: normal;
     font-weight: bold;
@@ -156,7 +156,7 @@ h2 {
 }
 
 h3 {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Museo Sans Cyrl", sans-serif;
     font-weight: 700;
     font-size: 28px;
     line-height: 130%;
@@ -164,7 +164,7 @@ h3 {
 }
 
 h5 {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Museo Sans Cyrl", sans-serif;
     font-weight: 800;
     font-size: 20px;
     line-height: 130%;
